--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "build": "next build",
     "deploy": "pnpm run build && touch out/.nojekyll && push-dir --dir=out --branch=gh-pages --verbose",
+    "lint": "eslint . --max-warnings 0",
     "start": "next",
     "typecheck": "tsc --noEmit"
   },
@@ -45,6 +46,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.23",
     "@types/styled-components": "^5.1.34",
+    "eslint-plugin-mdx": "^3.1.5",
     "jsx-to-string-loader": "^1.2.0",
     "next": "^14.2.1",
     "push-dir": "^0.4.1",
