--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -8,9 +8,10 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
+  pull-requests: write
 
 jobs:
   release:
