--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -49,7 +49,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@bigcommerce/configs": "workspace:^",
-    "@bigcommerce/pack": "^0.2.0",
+    "@bigcommerce/pack": "workspace:^",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@swc/core": "^1.4.14",
     "@swc/jest": "^0.2.36",
