chore: only update peer deps when out of range

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,5 +10,8 @@
   },
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": [],
+  "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
+    "onlyUpdatePeerDependentsWhenOutOfRange": true
+  }
 }
