--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "turbo typecheck"
   },
   "devDependencies": {
+    "@changesets/assemble-release-plan": "^6.0.4",
     "@changesets/changelog-git": "^0.2.0",
     "@changesets/cli": "^2.27.9",
     "@commitlint/cli": "^19.5.0",
@@ -20,5 +21,10 @@
     "@types/babel__standalone": "^7.1.4",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@changesets/assemble-release-plan": "patches/@changesets__assemble-release-plan.patch"
+    }
   }
 }
