build: update codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,1 @@
-* @bigcommerce/frontend @bigcommerce/product-design
-packages/docs @bigcommerce/dev-docs-team @bigcommerce/frontend @bigcommerce/product-design
+* @bigcommerce/big-design-stewards @bigcommerce/team-platform-design
