chore: update permissions

--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -7,7 +7,12 @@ on:
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
-permissions: write-all
+permissions:
+  id-token: write
+  contents: write
+  packages: write
+  pull-requests: write
+  issues: read
 
 jobs:
   release:
