--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -59,6 +59,7 @@
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.0.7",
     "camelcase": "^6.3.0",
+    "eslint": "^8.33.0",
     "flag-icons": "^7.5.0",
     "fs-extra": "^11.3.2",
     "glob": "^13.0.0",
