--- a/packages/big-design-patterns/package.json
+++ b/packages/big-design-patterns/package.json
@@ -64,12 +64,13 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20.19.25",
+    "@types/node": "^24.10.4",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/styled-components": "^5.1.34",
     "babel-jest": "^30.2.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.33.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-fail-on-console": "^3.3.1",
