--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -58,6 +58,7 @@
     "@types/styled-components": "^5.1.34",
     "babel-jest": "^30.2.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.33.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "jest-fail-on-console": "^3.3.1",
