--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -39,12 +39,13 @@
     "@bigcommerce/configs": "workspace:^",
     "@styled/typescript-styled-plugin": "^1.0.1",
     "@types/gtag.js": "^0.0.20",
-    "@types/node": "^20.19.25",
+    "@types/node": "^24.10.4",
     "@types/prettier": "^2.0.1",
     "@types/react": "^18.2.73",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.23",
     "@types/styled-components": "^5.1.34",
+    "eslint": "^8.33.0",
     "eslint-plugin-mdx": "^3.6.2",
     "jsx-to-string-loader": "^1.2.0",
     "next": "^15.5.9",
