--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -21,11 +21,12 @@
   },
   "devDependencies": {
     "@bigcommerce/eslint-config": "2.12.0",
-    "@types/node": "^20.19.25",
+    "@types/node": "^24.10.4",
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "@types/styled-components": "5.1.34",
     "@vitejs/plugin-react": "4.3.4",
+    "eslint": "^8.33.0",
     "typescript": "5.9.3",
     "vite": "7.2.4"
   }
